# kPM

./: .#LICENSE  README.md  kraken.db  kraken.sql  meson.build  uninstall.sh
bash_autocompeletion/: kraken
db/: kraken.db  kraken.sql  kraken_db.sh
include/: build_graph.h  conflict.h  dependency.h  get_pkg.h  get_ver_dep_checkins.h  graph.h  resolve_dep.h  resolve_dep.h~
querry/: checkinstalled.c
scripts/: #checkinstalled.sh#  #install.sh#  .#checkinstalled.sh  build.sh  checkinstalled.sh  checkinstalledbackup.sh  dir_filtring.sh  extract_dep_with_awk.sh  fake_install.sh  get_package.sh  getdeps.sh  getversion.sh  install.sh  manual_remove.sh  postinstall.sh  preinstall.sh  prepare.sh  remove.sh  test.sh
src/: .#get_ver_dep_checkins.c  DEADJOE  build_graph.c  conflict.c  dep  dependency.c  entropy  get_pkg.c  get_ver_dep_checkins.c  get_ver_dep_checkins.c~  graph.c  main.c  resolve_dep.c  resolve_dep.c~  test
test/: build_graph_test.c  entro  get_pkg_test  get_pkg_test.c  test
testonebyone/: graphtest  main.c  main.c~  testbuild.c  testgetverchck.c  testgraph  testgraph.c  testgraph.c~
